--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
 				        	<h2 class="text-white">Our Courses</h2>
 				        	<div class="delimiter"><div></div></div>
 				        	<img src="img/logo2.png">
-				        	<p class="section-entry">The comments of some of our customers 100% satisfied with the tinished Projects ma and high quality and on time</p>
+				        	<p class="section-entry">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				        	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
 				        </header>
 				      </div>
 				      <div class="section-body">
